웹서버 기본 세팅 완료

--- a/goodjob/src/main/resources/application.properties
+++ b/goodjob/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=goodjob
 server.port=8888
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.0.224/goodjob
-spring.datasource.username=root
+spring.datasource.url=jdbc:mariadb://192.168.0.224:3306/goodjob
+spring.datasource.username=good
 spring.datasource.password=1234
 
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml 
