--- a/goodjob/src/main/resources/application.properties
+++ b/goodjob/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=good
 spring.datasource.password=1234
 
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml 
+
+spring.servlet.multipart.location=/resource/img
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
