--- a/goodjob/src/main/resources/application.properties
+++ b/goodjob/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 server.servlet.session.timeout=30m
+
+#spring.datasource.url=jdbc:mariadb://localhost:3306/goodjob
+#spring.datasource.username=root
+
