--- a/goodjob/build.gradle
+++ b/goodjob/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 }
 
 tasks.named('test') {
