--- a/goodjob/src/main/resources/application.properties
+++ b/goodjob/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=goodjob
 server.port=8888
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.0.224:3306/goodjob
+spring.datasource.url=jdbc:mariadb://192.168.0.224:3306/goodjob_
 spring.datasource.username=good
 spring.datasource.password=1234
 
